--- a/GHJScriptShenanigans/GHJScriptShenanigans.vcxproj
+++ b/GHJScriptShenanigans/GHJScriptShenanigans.vcxproj
@@ -90,10 +90,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;GHJSCRIPTSHENANIGANS_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\Arnie\Desktop\ChakraCore\ChakraCore\lib\Jsrt;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\Arnie\Desktop\ChakraCore\ChakraCore\Build\VcBuild\bin\x86_release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ChakraCore.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -120,12 +123,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;GHJSCRIPTSHENANIGANS_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\Arnie\Desktop\ChakraCore\ChakraCore\lib\Jsrt;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\Arnie\Desktop\ChakraCore\ChakraCore\Build\VcBuild\bin\x86_release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ChakraCore.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -147,12 +153,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="JExports.h" />
+    <ClInclude Include="JCallback.h" />
+    <ClInclude Include="JExport.h" />
+    <ClInclude Include="JFloat.h" />
+    <ClInclude Include="JInt.h" />
+    <ClInclude Include="JObject.h" />
+    <ClInclude Include="JProperty.h" />
+    <ClInclude Include="JScriptManager.h" />
+    <ClInclude Include="JString.h" />
+    <ClInclude Include="Native.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="JCallback.cpp" />
+    <ClCompile Include="JExport.cpp" />
     <ClCompile Include="GHJScriptShenanigans.cpp" />
+    <ClCompile Include="JExports.cpp" />
+    <ClCompile Include="JFloat.cpp" />
+    <ClCompile Include="JInt.cpp" />
+    <ClCompile Include="JObject.cpp" />
+    <ClCompile Include="JProperty.cpp" />
+    <ClCompile Include="JScriptManager.cpp" />
+    <ClCompile Include="JString.cpp" />
+    <ClCompile Include="Native.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
